--- a/views/layout.html
+++ b/views/layout.html
@@ -5,8 +5,7 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <meta name='author' content='wommy'>
-    <meta name='description' content="Tommy Williams's Website - Website Design / Development">
-    <meta name='keywords' content='Tommy, Williams, Wommy, Tilliams, Website, Websites, Design, Develop, Development, Make, Create'>
+    <meta name='description' content=''>
     <block name='title'>
       <title>Tommy Williams</title>
     </block>
